--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,34 @@
   <%= @post.contents %>
 </p>
 
-<%= link_to '수정', edit_post_path(@post) , class: 'btn btn-warning text-white'%> |
+<%= link_to '수정', edit_post_path(@post) , class: 'btn btn-warning text-white'%> 
 <%= link_to '목록', posts_path, class: 'btn btn-info' %>
-<%= link_to '삭제', post_path(@post), method: 'delete', class: 'btn btn-danger'%>
+<%= link_to '삭제', post_path(@post), method: 'delete', class: 'btn btn-danger'%><br/>
+
+
+<!--댓글리스트-->
+
+<hr>
+<strong>reply</strong>
+<hr>
+
+<table class="table">
+  <thead>
+    <tr>
+    
+      <th scope="col">id</th>
+      <th scope="col">Content</th>
+      <th scope="col">Button</th>
+    </tr>
+  </thead>
+  <tbody>
+    <%@post.comments.each do |comment| %>
+     <tr>
+        <th><%=comment.id%></th>
+        <td><%= comment.content %></td>
+        <td><%=link_to '삭제','comments/#{comment.id}',method:'delete'%></td>
+     </tr>
+     <%end%>
+  </tbody>
+</table>
+<%=render 'comments/form',post:@post%>
