--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <%= link_to '수정', edit_post_path(@post) , class: 'btn btn-warning text-white'%> 
-<%= link_to '목록', posts_path, class: 'btn btn-info' %>
+<%= link_to '목록', cafe_path(@post.daum_id), class: 'btn btn-info' %>
 <%= link_to '삭제', post_path(@post), method: 'delete', class: 'btn btn-danger'%><br/>
 
 
