--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,8 +10,23 @@
   <%= @post.contents %>
 </p>
 
+<p>
+  <strong>ImagePath:</strong>
+  <img src="<%= @post.image_path %>"/>
+</p>
+<p>
+  <strong>thumb_fill:</strong>
+  <img src="<%= @post.image_path.thumb_fill %>"/>
+</p>
+<p>
+  <strong>thumb_fit:</strong>
+  <img src="<%= @post.image_path.thumb_fit %>"/>
+</p>
+
+
+
 <%= link_to '수정', edit_post_path(@post) , class: 'btn btn-warning text-white'%> 
-<%= link_to '목록', cafe_path(@post.daum_id), class: 'btn btn-info' %>
+<%= link_to '목록', cafe_path(@post.daum), class: 'btn btn-info' %>
 <%= link_to '삭제', post_path(@post), method: 'delete', class: 'btn btn-danger'%><br/>
 
 
